added div class text 2

--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ div{
 	padding-top: 30px;
 	display: inline-block;
 }
+.box2-text{
+	display: inline-block;
+	height:126px ;
+	width: 438px;
+	padding-left: 618px;
+	padding-right: 204px;
+	padding-top: 60px;
+}
+
